<resources>
    <string name="app_name">未遇</string>
    <string name="nearby">附近</string>
    <string name="futuremeet">未遇</string>
    <string name="message">消息</string>
    <string name="me">我</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_failure">定位失败，请检查网络</string>
    <string name="location_city">定位城市</string>
    <string name="hangzhou">杭州</string>
    <string name="current_location_city">当前定位城市</string>
    <string name="input_city_name_or_pinyin">城市名/拼音</string>
    <string name="sorry_no_cities_found">抱歉,暂时没有找到相关城市</string>
    <string name="choose_city">选择城市</string>
    <string name="is_locating">正在定位...</string>
    <string name="place_to_be">将要去哪</string>
    <string name="seach">搜索</string>
    <string name="not_relevant_place_in_curr_city">该城市没有找到相关地点</string>
    <string name="is_searching_relevant_place">正在查找相关地点...</string>
    <string name="accentColor">#FF4081</string>
    <string name="arrive">到达</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="label">标签</string>
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="please_choose_city">请选取城市</string>
    <string name="picture">图片</string>
    <string name="is_handlling">正在处理...</string>
    <string name="publish">发布</string>
    <string name="publish_moment">发布动态</string>
    <string name="moment_publish_success">动态发布成功</string>
    <string name="moment_publish_fail">动态上传失败</string>
    <string name="what_u_want_to_say_to_them">有什么想对未来的他们说？</string>
    <string name="please_edit_content_first">请先编辑发送内容</string>
    <string name="search_failed_please_check_network">查询失败,请检查网络</string>
    <string name="is_loading">正在加载</string>
    <string name="click_to_laod_more">点击加载更多</string>
    <string name="all_results_is_displayed">已显示所有结果</string>
    <string name="moment_fragment_page_title">动态</string>
    <string name="people_fragment_page_title">人</string>
    <string name="nickname">昵称</string>
    <string name="password">密码</string>
    <string name="phoneNumber">手机号码</string>
    <string name="verify_code">验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="register">注册</string>
    <string name="nick_nake">昵称</string>
    <string name="your_phone_number">你的手机号码</string>
    <string name="input_password">填入密码</string>
    <string name="input_verify_code">输入验证码</string>
    <string name="username_format_error_msg">昵称中不能包含空格或者@字符</string>
    <string name="please_input_nicknane">请填写昵称</string>
    <string name="please_input_phonenumber">请填入电话号码</string>
    <string name="please_check_phonenumber_format">请检查手机号码格式</string>
    <string name="please_input_phone_number">请输入密码</string>
    <string name="the_password_format_statement">密码需要包含5位(包含5位)以上的数字、字母</string>
    <string name="confirm">确认</string>
    <string name="phote_select_fail_please_retry">图片选取失败,请重试</string>
    <string name="please_set_avatar">请设置头像</string>
    <string name="please_wait">请稍后...</string>
    <string name="please_check_network">请检查网络设置</string>
    <string name="cancel">取消</string>
    <string name="avatar_selection_failed">头像选择失败,请重新选择</string>
    <string name="friends">好友</string>
    <string name="birthday">生日</string>
    <string name="male">男</string>
    <string name="gender">性别</string>
    <string name="female">女</string>
    <string name="please_input_birthday">请设置生日</string>
    <string name="please_input_gender">请确认性别</string>
    <string name="please_input_verify_code">请输入验证码</string>
    <string name="register_failed">注册失败</string>
    <string name="phonenumber_has_been_taken">该号码已经注册过</string>
    <string name="invalid_phonenumber">手机号码无效</string>
    <string name="username_taken">用户名已被占用</string>
    <string name="resend">重新发送</string>
    <string name="birthyear_restriction">年龄应在12岁和100之间</string>
    <string name="username">用户名</string>
    <string name="login">登录</string>
    <string name="login_fail">登录失败</string>
    <string name="phone_ro_password_wrroy">手机号码或密码错误</string>
    <string name="verification_failed">验证失败</string>
    <string name="please_check_and_try_again">请确认后重试</string>
    <string name="send_failed">发送失败</string>
    <string name="please_try_later">请稍后重试</string>
    <string name="is_logining">正在登陆...</string>
    <string name="arrive_time">到达时间</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="later">后</string>
    <string name="will_be">将在</string>
    <string name="from_now">距\n现\n在</string>
    <string name="minute_vertical">分\n钟</string>
    <string name="hour_vertical">小\n时</string>
    <string name="poi_publish_success">未来地发布成功</string>
    <string name="poi_publish_failed">未来地发布失败</string>
    <string name="add_future_poi">添加未来地</string>
    <string name="future_poi_out_of_date_reminder">未来地过期提醒</string>
    <string name="out_of_date_future_poi_have_cancled_for_u">" 已经过期，已为您自动取消"</string>
    <string name="OK">知道了</string>
    <string name="to_see_bigger_range">点击查看更远范围</string>
    <string name="choose_publish_poi">选择发布地点</string>
    <string name="please_choose_future_poi">请选择发布地点</string>
    <string name="publish_future_poi">发布未来地</string>
    <string name="two_future_poi_at_most">最多只能发布两个未来地</string>
    <string name="publish_poi_first_please">请先发布未来地</string>
    <string name="publish_now">现在发布</string>
    <string name="not_get_current_location_yet">尚未获得当前位置</string>
    <string name="all">全部</string>
    <string name="two_year_of_age">2岁</string>
    <string name="five_birth_year_of_age">5岁</string>
    <string name="ten_year_of_age">10岁</string>
    <string name="no_limit">不限</string>
    <string name="age_difference_age">年龄相差范围</string>
    <string name="arrive_time_year_of_age">到达时间相差范围</string>
    <string name="two_hour">2小时</string>
    <string name="half_an_hour">30分钟</string>
    <string name="one_hour">1小时</string>
    <string name="five_hour">5小时</string>
    <string name="dealing_with_images">正在处理图片...</string>
    <string name="early_arrive">早到</string>
    <string name="late_arrive">晚到</string>
    <string name="minute_ago">分钟前</string>
    <string name="arrive_at_same_time">同时到达</string>
    <string name="yesterday">昨天</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="meter">m</string>
    <string name="someone_like_you_moment">有人赞了你</string>
    <string name="just_now">刚刚</string>
    <string name="school_or_firm">学校/公司</string>
    <string name="personal_info">个人信息</string>
    <string name="occupation">职业</string>
    <string name="home_town">家乡</string>
    <string name="idiograph">个人签名</string>
    <string name="personal_label">标签</string>
    <string name="my_life">我的生活</string>
    <string name="keep_personal">保密</string>
    <string name="input_area_info">输入地区信息</string>
    <string name="input_occupation_info">输入职业信息</string>
    <string name="input_school_or_company_info">输入公司或学校信息</string>
    <string name="area">地区</string>
    <string name="input_idiograph">输入个人签名</string>
    <string name="selflabel">个人标签</string>
    <string name="music">音乐</string>
    <string name="food">食物</string>
    <string name="sport">运动</string>
    <string name="tv">影视</string>
    <string name="literature">书和动漫</string>
    <string name="self_info_update_success">个人信息更新成功</string>
    <string name="update_failed_please_check_network">更新失败，请检查网络</string>
    <string name="follow_success">关注成功</string>
    <string name="folllow_failed">关注失败</string>
    <string name="you_have_already_follow_this_person">你已经关注过这个人</string>
    <string name="good_friends">好友</string>
    <string name="followee">关注</string>
    <string name="follower">粉丝</string>
    <string name="comment">评论</string>
    <string name="like">赞</string>
    <string name="my_comment">我的评论</string>
    <string name="my_like">我的赞</string>
    <string name="conversation">聊天</string>
    <string name="you_have_liked">你赞了</string>
    <string name="have_liked_your_moment">赞了你</string>
    <string name="send">发送</string>
    <string name="comment_failed">评论失败</string>
    <string name="have_commented">评论</string>
    <string name="reply">回复</string>
    <string name="reply_to_you">回复你</string>
    <string name="conversion">聊天</string>
    <string name="all_has_been_showed">已经显示全部</string>
    <string name="input_comments">输入评论</string>
    <string name="moment">动态</string>
    <string name="no_more_comment_concern_your_two">没有更多你们的相关评论</string>
    <string name="add_as_friends">加好友</string>
    <string name="change_username">修改用户名</string>
    <string name="change_passwords">修改密码</string>
    <string name="setting">设置</string>
    <string name="change_avatar">修改头像</string>
    <string name="avatar_change_success">头像修改成功</string>
    <string name="avatar_selection_failed_try_again">选取失败，请重试</string>
    <string name="avatar_upload_failed">头像上传失败</string>
    <string name="account_info_modify">账户设置</string>
    <string name="log_out">退出登录</string>
    <string name="input_username">输入用户名</string>
    <string name="complete">完成</string>
    <string name="modify_username">修改用户名</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="comfirm_to_change">确认修改</string>
    <string name="password_change_failed_please_try_later">修改失败，请稍后重试</string>
    <string name="change_password_success">修改成功</string>
    <string name="push_service">推送</string>
    <string name="change_password">修改密码</string>
    <string name="on">打开</string>
    <string name="off">关闭</string>
</resources>
