<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/verify_code"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/verify_code"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/verify_code_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:hint="@string/input_verify_code"
            android:inputType="phone"
            android:lines="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:background="@drawable/poi_search_button_selector"
            android:text="@string/get_verify_code"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <Button
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:text="@string/confirm"
        android:background="@drawable/poi_search_button_selector"
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
