<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kevin.futuremeet.activity.PasswordChangeAcitivity">

    <include layout="@layout/toolbar_main" />


    <EditText
        android:layout_margin="16dp"
        android:id="@+id/old_password_edittext"
        android:hint="@string/old_password"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_margin="16dp"
        android:id="@+id/new_password_edittext"
        android:hint="@string/new_password"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/change_password_button"
        android:text="@string/comfirm_to_change"
        android:background="@drawable/poi_search_button_selector"
        android:layout_marginLeft="16dp"
        android:textColor="@android:color/white"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
