<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyShadow"
    android:orientation="vertical"
    tools:context="com.kevin.futuremeet.activity.AccountEditActivity">

    <include layout="@layout/toolbar_main" />


    <LinearLayout
        android:id="@+id/change_avatar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/normal_white_pressed_grey_selector"
        android:gravity="center_vertical"
        android:minHeight="@dimen/normal_selection_height"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/setting_page_avatar_size"
            android:layout_height="@dimen/setting_page_avatar_size"
            android:layout_marginLeft="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/change_avatar"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/change_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/normal_white_pressed_grey_selector"
        android:gravity="center_vertical"
        android:minHeight="@dimen/normal_selection_height"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:src="@drawable/username_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/change_username"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_white_pressed_grey_selector"
        android:gravity="center_vertical"
        android:minHeight="@dimen/normal_selection_height"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:src="@drawable/passwords_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/change_passwords"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:minHeight="@dimen/normal_selection_height"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:src="@drawable/setting_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/push_service"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <android.support.v7.widget.SwitchCompat
            android:checked="true"
            android:id="@+id/push_service_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="16dp"
            android:textOff="@string/off"
            android:textOn="@string/on" />
    </LinearLayout>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/poi_search_button_selector"
        android:text="@string/log_out"
        android:textColor="@android:color/white" />


</LinearLayout>
