<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/dest_choose_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/toolbar_elevation"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="8dp">

        <SearchView
            android:id="@+id/dest_place_searchview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:iconifiedByDefault="false"
            android:queryHint="@string/place_to_be"/>

        <Button
            android:id="@+id/poi_search_button"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/poi_search_button_selector"
            android:clickable="true"
            android:enabled="false"
            android:text="@string/seach"
            android:textColor="@android:color/white" />
    </LinearLayout>




    <ListView
        android:id="@+id/dest_search_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_relevant_place_in_curr_city"/>



    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="here is dest choose fragment" />

</LinearLayout>
