<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_tab_height"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/nearby_tab_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/nearby_image"
            android:layout_width="@dimen/bottom_tab_image_size"
            android:layout_height="@dimen/bottom_tab_image_size"
            android:src="@drawable/nearby" />

        <TextView
            android:id="@+id/nearby_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nearby"
            android:textSize="@dimen/bottom_tab_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/futuremeet_tab_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/futuremeet_image"
            android:layout_width="@dimen/bottom_tab_image_size"
            android:layout_height="@dimen/bottom_tab_image_size"
            android:src="@drawable/futuremeet" />

        <TextView
            android:id="@+id/futuremeet_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/futuremeet"
            android:textSize="@dimen/bottom_tab_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/news_tab_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/news_image"
            android:layout_width="@dimen/bottom_tab_image_size"
            android:layout_height="@dimen/bottom_tab_image_size"
            android:src="@drawable/news" />

        <TextView
            android:id="@+id/news_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="@dimen/bottom_tab_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/me_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/me_image"
            android:layout_width="@dimen/bottom_tab_image_size"
            android:layout_height="@dimen/bottom_tab_image_size"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/me_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me"
            android:textSize="@dimen/bottom_tab_text_size" />
    </LinearLayout>

</LinearLayout>
